# bit-manipulation

./: CMakeLists.txt  README.md  main.c
Ethernet/: ETH_connection_info.c  ETH_establish_connection.c  ETH_prepare_package.c
Motor/: check_motor_fault.c  display_motor_info.c  manage_faults.c  motor_init.c
headers/: ETH_public.h  check_motor_fault.h  display_motor_info.h  main.h  manage_faults.h  motor_init.h
